# quickstart

./: .gitignore  README.md  demo.py  pyproject.toml  quickstart-pipeline.py  quickstart.sh  standardmodel_quickstart
.github/workflows/: quickstart.yml
data/: README.md  mimic_iv_demo_meds_events.parquet  mimic_iv_demo_meds_labels.parquet
scripts/: prep_mimic_demo_data.py
tests/: __init__.py  conftest.py  test_data_generation.py  test_downstream_tasks.py  test_extract_embeddings.py  test_prep_mimic_demo_data.py  test_quickstart.sh
