[project]
name = "standard-model-quickstart"
version = "0.1.0"
description = "Quickstart demo: set up environment, download SMB-v1-1.7B, extract patient embeddings, and train classifiers."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0,<5.0",
    "datasets>=2.14.0,<4.0",
    "accelerate>=0.20.0,<1.0",
    "numpy>=1.24.0,<3.0",
    "pandas>=2.0.0,<3.0",
    "scikit-learn>=1.3.0,<2.0",
    "lifelines>=0.27.0,<1.0",
    "python-dotenv>=1.0.0,<2.0",
    "huggingface_hub>=0.20.0",
    "smb-utils @ git+https://github.com/standardmodelbio/smb-utils",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0",
    "pytest-cov>=4.1.0,<5.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = []
[tool.setuptools]
py-modules = ["demo"]
